[tool.poetry]
name = "nwkfmt"
version = "0.3.0"
description = "Simple Newick tree validator and formatter"
authors = ["Cornelius Roemer <cornelius.roemer@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nwkfmt = "nwkfmt.cli:entry_point"

[tool.poetry.dependencies]
python = ">=3.8"
biopython = "^1.73"
typer = ">=0.9.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
